  * Added field "type" to the experimental results in the database
  * Input model can now be defined by a SLHA file with QNUMBERS blocks
  * Small bug fix in likelihood computation
  * Changes in output: width values added, coverage groups and others (see manual for details)
  * Added option for signal strength multipliers in cross section calculator

Release v1.2.4, Thu 3 Sep 2020
=======================================================

  * added pyhf support
  * pickle path bug fix
  * bug fix for parallel xseccomputers
  * Introduced the SMODELS_CACHEDIR environment variable to allow for a different
    location of the cached database file
  * fixed dataId bug in datasets

Release v1.2.3, Mon 27 Apr 2020
=======================================================

  * database updated with results from more than 20 new analyses
  * server for databases is now smodels.github.io, not smodels.hephy.at
  * small bug fix for displaced topologies
  * small fix in slha printer, r_expected was r_observed
  * Downloaded database files now stored in $HOME/.cache/smodels

Release v1.2.2, Tue 28 Nov 2018
=======================================================

  * Updated database, added T3GQ eff maps for 8TeV and a few ATLAS 13 TeV results
  * Database "official" now refers to a database without fastlim results, "official_fastlim", to the official database *with* fastlim
  * List displaced signatures in missing topologies
  * Small improvements in documentation
  * Fix in clustering for asymmetric masses
  * Small improvements in the interactive plots tool

Release v1.2.1, Tue 9 Oct 2018
=======================================================

  * Fix in particleNames for non-MSSM models
  * Fixed the "marginalize" recipe
  * Fixed the T2bbWWoff 44 signal regions plots in manual

Release v1.2.0, Wed 15 Aug 2018
=======================================================

  * Decomposition and experimental results properly handle non-MET BSM final states (e.g. HSCP)